issue 5 display contact-info form, hide mail icon when contact form is visible; do not overlap search form with contact form

--- a/src/plonetheme/buuk/theme/css/style-custom.css
+++ b/src/plonetheme/buuk/theme/css/style-custom.css
@@ -459,3 +459,9 @@ div#footer {
 #LSResult {
     right: auto;
 }
+
+.secondary-links a.on em.icon-mail {
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(0.2em);
+}
